--- a/configure.ac
+++ b/configure.ac
@@ -114,6 +114,9 @@ dnl These are bootstrap requirements, once built, libtool may work with
 dnl much older releases of autoconf and automake.  See release notes.
 AM_INIT_AUTOMAKE([1.8 gnits dist-bzip2]) ## We use auto-m4_including
 
+dnl We use m4sh to generate libtool's portable shell scripts
+AC_SUBST([M4SH], ['autom4te -l m4sh'])
+
 dnl Make sure config.status is regenerated when the version timestamp changes
 AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_builddir)/stamp-vcl'])
 
