Since defs can change (path to grep for example) when it is made for a different host, it can't be shipped.  That also means that defs will always be generated in the build tree, so each test case can have the srcdir discovery factored away into tests/defs.in:
* Makefile.am (EXTRA_DIST): s/defs/defs.in/g
* tests/Makefile.am (defs): New rule to remake defs from the
parent directory's Makefile.
* tests/cdemo-conf.test, tests/cdemo-exec.test,
tests/cdemo-make.test, tests/cdemo-shared.test,
tests/cdemo-static.test, tests/demo-conf.test,
tests/demo-deplibs.test, tests/demo-exec.test,
tests/demo-hardcode.test, tests/demo-inst.test,
tests/demo-make.test, tests/demo-nofast.test,
tests/demo-noinst-link.test, tests/demo-nopic.test,
tests/demo-pic.test, tests/demo-relink.test,
tests/demo-shared.test, tests/demo-static.test,
tests/demo-unst.test, tests/depdemo-conf.test,
tests/depdemo-exec.test, tests/depdemo-inst.test,
tests/depdemo-make.test, tests/depdemo-nofast.test,
tests/depdemo-relink.test, tests/depdemo-shared.test,
tests/depdemo-static.test, tests/depdemo-unst.test,
tests/f77demo-conf.test, tests/f77demo-exec.test,
tests/f77demo-make.test, tests/f77demo-shared.test,
tests/f77demo-static.test, tests/link-2.test, tests/link.test,
tests/mdemo-conf.test, tests/mdemo-dryrun.test,
tests/mdemo-exec.test, tests/mdemo-inst.test,
tests/mdemo-make.test, tests/mdemo-shared.test,
tests/mdemo-static.test, tests/mdemo-unst.test,
tests/mdemo2-conf.test, tests/mdemo2-exec.test,
tests/mdemo2-make.test, tests/nomode.test, tests/pdemo-conf.test,
tests/pdemo-exec.test, tests/pdemo-inst.test,
tests/pdemo-make.test, tests/quote.test, tests/sh.test,
tests/suffix.test, tests/tagdemo-conf.test,
tests/tagdemo-exec.test, tests/tagdemo-make.test,
tests/tagdemo-shared.test, tests/tagdemo-static.test,
tests/tagtrace.test: Removed srcdir discovery boilerplate...
* tests/defs.in: ...and put it here.

--- a/Makefile.am
+++ b/Makefile.am
@@ -144,11 +144,13 @@ libtoolize: $(sh_files) libtoolize.in Makefile
 	chmod a-w libtoolize.tmp
 	mv -f libtoolize.tmp libtoolize
 
+# The defs script shouldn't be recreated whenever the Makefile is
+# regenerated since the source tree can be read-only.
 check-recursive: tests/defs
-tests/defs: tests/defs.in Makefile
-	cd $(top_srcdir); \
+tests/defs: tests/defs.in Makefile.am
 	rm -f tests/defs.m4sh tests/defs.tmp tests/defs; \
-	$(M4SH) -B ./config tests/defs.in > tests/defs.m4sh; \
+	$(M4SH) -B $(top_srcdir)/config \
+		$(top_srcdir)/tests/defs.in > tests/defs.m4sh; \
 	input="defs.in"; \
 	$(edit) tests/defs.m4sh > tests/defs.tmp; \
 	rm -f tests/defs.m4sh; \
