--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,23 @@
 ## Process this file with automake to produce Makefile.in
+##
+## Copyright (C) 2003, 2004 Free Software Foundation
+##
+## This program is free software; you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation; either version 2 of the License, or
+## (at your option) any later version.
+##
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+##
+## You should have received a copy of the GNU General Public License
+## along with this program; see the file COPYING.  If not, write to
+## the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+## Boston, MA 02111-1307, USA.
+
+DISTCLEANFILES =
 
 CXX_TESTS = \
 	tagdemo-static.test tagdemo-make.test tagdemo-exec.test \
@@ -71,7 +90,7 @@ TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
 	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)" F77="$(F77)" \
 	FFLAGS="$(FFLAGS)" CXX="$(CXX)" CXXFLAGS="$(CXXFLAGS)" CPP="$(CPP)"
 
-EXTRA_DIST = defs $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
+EXTRA_DIST = defs.in $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
 DIST_SUBDIRS = $(CONF_SUBDIRS)
 
 # FIXME: Automake-1.7b (at least) only honours DIST_SUBDIRS if SUBDIRS is
@@ -103,6 +122,11 @@ $(srcdir)/package.m4: $(top_srcdir)/configure.ac
 ## ------------ ##
 ## Test suite.  ##
 ## ------------ ##
+
+$(TESTS): defs
+defs: defs.in ../Makefile.am
+	cd .. && $(MAKE) $(AM_MAKEFLAGS) tests/defs
+DISTCLEANFILES += defs
 
 TESTSUITE_AT = \
 	testsuite.at \
