* libltdl/Makefile.am (libltdlc_la_LIBADD): Don't use libdlloader_la_OBJECTS, an undocumented Automake internal variable... (libltdlc_la_SOURCES): ...use libdlloader_la_SOURCES here instead. Reported by Bob Friesenhahn <bfriesen@simple.dallas.tx.us>

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -60,10 +60,10 @@ libltdl_la_CPPFLAGS	= -DLTDLOPEN=libltdl $(AM_CPPFLAGS)
 libltdl_la_LDFLAGS	=  $(VERSION_INFO) $(LT_DLPREOPEN)
 libltdl_la_LIBADD	= libdlloader.la
 
-libltdlc_la_SOURCES	= $(libltdl_la_SOURCES)
+libltdlc_la_SOURCES	= $(libltdl_la_SOURCES) $(libdlloader_la_SOURCES)
 libltdlc_la_CPPFLAGS	= -DLTDLOPEN=libltdlc $(AM_CPPFLAGS)
 libltdlc_la_LDFLAGS	= -weak libdlloader.la $(LT_DLPREOPEN)
-libltdlc_la_LIBADD	=  $(libdlloader_la_OBJECTS) $(libdlloader_la_LIBADD)
+libltdlc_la_LIBADD	= $(libdlloader_la_LIBADD)
 
 ## These are installed as a subdirectory of pkgdatadir so that
 ## libtoolize --ltdl can find them later:
